# communities

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.migrations  README.md  communities.openapi.yaml  docker-compose.yml  issue.xml  openapi.json  token.txt
.sqlx/: query-002e33d5fcddba6844b8d995f4d06ba4a8ce09621dcab17f30599778794ecdd0.json  query-05e1305e770c126a9d75c491502bed841c421b876219480e267f6cb3b117c32e.json  query-0f800bcd2484c54d65ac5c97fba629b8f76c56939151c9513f62e3a2c1b529f0.json  query-127e7e7ff4367fae9252d05e5f5964780a1c26955ba74cd5ae6de20bd669510d.json  query-15919952b43433e7cdc8ca93ddbd1a7d5ac83b6f1020952dc303dde37a7295cb.json  query-24f33843c97ec03d1cb841e1ee04e237395d293fe6a171e4bb28708455d25457.json  query-348d634aa5a3af39ec7d01029ab3cda2de1abead6fb75fc9287777aa2da312a2.json  query-39f60bdc1c5777701047d1151c156a600528f23e24ec6e0315122e6992cadd53.json  query-3d7834dc3512ef99ddba577f430cea3f290ee349ef4b4e92833eab4d5eefee88.json  query-4140e35f2c333dcc72e8a0552b43e01a42301d8bae26b0917366d8d7cdd31e5a.json  query-44615ca3925971045cb90187d32cac3a05050228d036e73eca214c1ef7470687.json  query-496e9bc29dbc44e75286aa2949441e2e483a740ed4ba79b57928f61f6f197c1d.json  query-4ab594e565fd89899d05b67a8fa366e91f41a1a65b8c660cdcba18b72ebe24b0.json  query-4d44bfd57d3083124b577bc642c0991ea6cc2a465b68c9500c0e3221dd7da218.json  query-7986d72b7248456062539faf275294b5c83f5f906e02fc1887f4300d875b65a9.json  query-79f775420df5fcc332f94dcd1dac4c9d10718e987344b796431ee6894d271b25.json  query-7b2f30763fba3c1f424e026107be9df40ab8882decbe7975e87d3c4f13c77a5e.json  query-8383204b513c78a19836c07317b00f15580f7566ab38bedcb6183d26fddbe69a.json  query-8723187d8918310e8b89cc8318b4c95f2a27ea7ffc4aa068be4b04a76e9930bc.json  query-8e6b767ea2ff164911d675dbb28467887b5690169a4e9dbeda9e4d1fa9cdd789.json  (+13 more)
api/: Cargo.toml
api/src/: app.rs  config.rs  lib.rs  main.rs
api/src/http/: mod.rs
api/src/http/channels/: handlers.rs  routes.rs
api/src/http/friend/: handlers.rs  routes.rs
api/src/http/health/: handler.rs  mod.rs  router.rs
api/src/http/role/: handlers.rs  routes.rs
api/src/http/server/: api_error.rs  app_state.rs  middleware.rs  mod.rs  response.rs  service.rs
api/src/http/server/middleware/: auth.rs
api/src/http/server/middleware/auth/: auth_state.rs  entities.rs  mod.rs
api/src/http/server_invitations/: handlers.rs  routes.rs
api/src/http/server_members/: handlers.rs  routes.rs
api/src/http/servers/: handlers.rs  routes.rs
api/src/servers/: handlers.rs  routes.rs
api/tests/: api.rs  channels.rs  roles.rs  server_invitations.rs  server_members.rs  servers.rs
api/tests/context/: mod.rs
api/tests/helpers/: auth.rs
compose/: rabbitmq-init.sh
config/: routing.yaml
core/: Cargo.toml
core/.sqlx/: query-f5624e172d418c807619fd0698094994bf4e6ecef5f5f084f9bb578f394c33a8.json  query-fcb939b3413fb0965802a7825b43eb772afd8aca2847f39ed02da8c342eba93c.json
core/migrations/: 20251107091121_create_friend_requests_table.up.sql  20251216120000_create_channels_table.down.sql  20251216120000_create_channels_table.up.sql  20251223120000_create_roles_table.up.sql  20251223130000_create_member_roles_table.down.sql  20251223130000_create_member_roles_table.up.sql  20260115120000_remove_routing_key_from_outbox.down.sql  20260115120000_remove_routing_key_from_outbox.up.sql  20260118130000_create_server_invitations_table.down.sql  20260118130000_create_server_invitations_table.up.sql
core/src/: lib.rs
core/src/application/: mod.rs
core/src/domain/: mod.rs
core/src/domain/authorization/: ports.rs  services.rs
core/src/domain/channel/: entities.rs  ports.rs  services.rs
core/src/domain/channel_member/: entities.rs  ports.rs  services.rs
core/src/domain/common/: mod.rs  services.rs
core/src/domain/friend/: entities.rs  ports.rs  services.rs
core/src/domain/health/: entities.rs  mod.rs  port.rs  services.rs
core/src/domain/member_role/: entities.rs  ports.rs  services.rs
core/src/domain/outbox/: entities.rs  error.rs  ports.rs  services.rs
core/src/domain/role/: entities.rs  ports.rs  services.rs
core/src/domain/server/: entities.rs  ports.rs  services.rs
core/src/domain/server_invitation/: entities.rs  ports.rs  services.rs
core/src/domain/server_member/: entities.rs  ports.rs  services.rs
core/src/domain/server_pictures/: entities.rs  ports.rs  services.rs
core/src/domain/test/: mod.rs
core/src/domain/test/channel/: mock_test.rs
core/src/domain/test/channel_member/: mock_test.rs  mod.rs
core/src/domain/test/friend/: mock_test.rs
core/src/domain/test/member_role/: mod.rs
core/src/domain/test/role/: mock_test.rs
core/src/domain/test/server/: mock_test.rs
core/src/domain/test/server_member/: mock_test.rs
core/src/domain/user/: entities.rs  port.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/authorization/: mod.rs  spicedb.rs
core/src/infrastructure/channel/repositories/: mod.rs  postgres.rs
core/src/infrastructure/friend/repositories/: error.rs  postgres.rs
core/src/infrastructure/health/repositories/: postgres.rs
core/src/infrastructure/member_role/repositories/: postgres.rs
core/src/infrastructure/outbox/: entities.rs  error.rs  event.rs  mod.rs  postgres.rs  writer.rs
core/src/infrastructure/role/repositories/: postgres.rs
core/src/infrastructure/server/repositories/: postgres.rs
core/src/infrastructure/server_invitation/repositories/: postgres.rs
core/src/infrastructure/server_member/repositories/: postgres.rs
core/src/infrastructure/server_pictures/repositories/: entities.rs  mod.rs  reqwest.rs
core/src/infrastructure/user/repositories/: error.rs  http.rs
db/: Cargo.toml
db/examples/: create_server.rs
db/migrations/: 20241104120000_create_communities_schema.down.sql  20241104120000_create_communities_schema.up.sql  20251103202930_create_server_table.up.sql
db/src/: database.rs  lib.rs
db/src/models/: server.rs
db/src/repositories/: server.rs
docs/: book.toml
outbox_dispacth/: Cargo.toml
outbox_dispacth/src/: lapin.rs  lib.rs  main.rs
outbox_dispacth/src/dispatch/: mod.rs
(+27 files in other folders)
