[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
communities_core = { path = "../core" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

# JWT
jsonwebtoken = "9.2"
axum-extra = { version = "0.12.2", features = ["cookie"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
env = "1.0.1"
dotenv = "0.15.0"
