[package]
name = "core"
description = "Core business logic library for Community Service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde"] }

[dev-dependencies]
mockall = "0.13.1"
