[package]
name = "communities_core"
description = "Core business logic library for Community Service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "communities_core"
path = "src/lib.rs"

[features]
default = ["postgres"]
postgres = []

[dependencies]
events-protobuf = { git = "https://github.com/beep-industries/events-protobuf.git" }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
beep-auth = "0.1.0"
permission-translation = "0.3.0"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
urlencoding = "2.1.3"
beep-authz = "0.3.0"
tracing = "0.1.44"

[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1", features = ["full"] }
