[package]
name = "outbox_dispacth"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = "4.5.53"
lapin = "3.7.2"
prost = "0.14.1"
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
