[package]
name = "outbox_dispacth"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = "4.5.53"
communities_core = { path = "../core" }
dotenv = "0.15"
futures-util = "0.3.31"
lapin = "3.7.2"
prost = "0.14.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror.workspace = true
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
